--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,64 +1,18 @@
 .banner {
-  position: relative;
   display: flex;
-  justify-content: space-between;
-  height: 400px;
-  width: 1440px;
-  align-items: center;
   color: white;
+  justify-content: space-evenly;
+  background-color: #030518;
 }
 
 .banner img {
-  position: relative;
   width: 100%;
-  max-height: 400px;
-  object-fit: cover;
+  height: 500px;
+  z-index: 0;
+}
+
+.banner h1 {
   z-index: 1;
-}
-
-.banner .fa-solid {
-  z-index: 2;
+  font-size: 64px;
   position: absolute;
-  font-size: 48px;
-}
-
-.banner .fa-solid:hover {
-  transform: scale(1.1);
-}
-
-.banner .fa-arrow-left {
-  margin-left: 50px;
-  left: 20px;
-}
-
-.banner .fa-arrow-right {
-  margin-right: 50px;
-  right: 20px;
-}
-
-.banner .index-carousel {
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  gap: 5px;
-  bottom: 5%;
-  left: 43%;
-}
-
-.banner .index-carousel span {
-  position: relative;
-  font-size: 24px;
-  z-index: 2;
-  width: 30px;
-  height: 15px;
-  border-radius: 3px;
-  background-color: rgba(255, 255, 255, 0.7);
-}
-
-.banner .index-carousel .span-selected {
-  background-color: rgba(84, 84, 84, 0.729);
-}
-
-.banner .index-carousel span:hover {
-  background-color: rgba(56, 55, 77, 0.729);
 }
