--- a/src/components/CardsContainer/cardsContainer.scss
+++ b/src/components/CardsContainer/cardsContainer.scss
@@ -1,54 +1,75 @@
 section {
     display: flex;
-    width: 100%;
     flex-direction: row;
+    height: 1000px;
     justify-content: space-around;
     position: relative;
     align-items: center;
-    height: 1000px;
+    background-color:  rgba(23, 30, 36, 0.9);
     
-    .background-img {
+    h2 {
         position: absolute;
-        object-fit: fill;
-        height: 100%;
-        width: 100%;
-        top: 0;
+        color: white;
+        font-size: 36px;
+        border-radius: 5px;
+        top: 15px;
+        left: 70px;
+        z-index: 2;
     }
+
+    .fa-solid {
+        z-index: 2;
+        position: absolute;
+        font-size: 48px;
+        color:  rgba(255, 255, 255, 0.7);        
+        opacity: 1;        
+        transition: opacity 0.8s;
+    }
+    .fa-solid:hover {
+        transform: scale(1.2);
+        color: white;
+      }
+      .fa-arrow-left {
+        margin-left: 0px;
+        left: 15px;
+      }
+      .fa-arrow-right {
+        margin-right: 0px;
+        right: 15px;
+      }
 
     figure {
         position: relative;
         overflow: hidden;
-        height: 550px;
-        width: 300px;
+        height: 500px;
+        width: 350px;
         padding: 20px;
         border-radius: 8px;
         color: white;
         font-size: 20px;
         background: linear-gradient(rgba(180, 115, 246, 0.804), rgba(209, 149, 36, 0.781));
-        box-shadow: -10px -8px 5px rgba(0, 0, 0, 0.626);
-        transition: transform 0.4s,background-color 2s;
+        box-shadow: 10px 8px 5px 10px rgba(0, 0, 0, 0.626);
+        transition: transform 0.4s, background-color 2s ,height 0.8s;
         background-color: unset;
 
         figcaption {
-            h2 {
-
+            h3 {
+                margin: 5px 0;
             }
             p {
-
             }
         }
         .wrapper {               
             .triangle {
                 position: absolute;
                 bottom: 0;
-                left: -5px;
+                left: 0px;
                 width: 0;
                 height: 0;
-                border-left: 22rem solid transparent;
+                border-left: 25rem solid transparent;
                 border-bottom: 22rem solid  rgba(23, 30, 36, 0.9);
                 transition: transform 1s,opacity 2s;
                 z-index: 2;
-                // 2560x270
             }
             img {
                 opacity: 0;
@@ -58,20 +79,39 @@ section {
                 transition: opacity 0.8s;
                 z-index: 1;
             }
+            .skill-card {
+                top: 4rem;
+                opacity: 0;
+                transition: opacity 0.8s, transform 0.8s;
+            }
         }
     }
     figure:hover { 
-        transition: transform 0.4s,background-color 2s;
+        height: 680px;
+        transition: transform 0.4s,background-color 2s , height 0.8s;
         transform: scale(1.1);
         background-color: black;
+        figcaption {
+            p {
+                display: none;
+            }
+
+        }
         .triangle {
             transition: transform 2s,opacity 2s;
             transform: translateX(400px);
             opacity: 0;
         }
-        img {
+        img , .skill-card {
             transition: opacity 0.8s;
             opacity: 1;
         }
     }
-}
+        
+        figure:hover ~ .fa-arrow-left,
+        figure:hover ~ .fa-arrow-right {
+            transition: opacity 0.8s;
+            opacity: 0;
+        }
+    }
+
