--- a/src/components/HeaderFooter/headerfooter.css
+++ b/src/components/HeaderFooter/headerfooter.css
@@ -1,10 +1,23 @@
 header {
   display: flex;
   flex-direction: row;
-  background-color: rgba(23, 30, 36, 0.9);
   justify-content: space-around;
   align-items: center;
+  text-align: center;
   color: white;
+  background-color: rgba(23, 30, 36, 0.9);
+  position: static;
+  top: 0;
+  width: 100%;
+}
+
+header .logo-container {
+  display: flex;
+  margin: 10px 0;
+}
+
+header .logo-container h1 {
+  margin: auto 0;
 }
 
 header .logo-container .logo:hover {
