--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -7,23 +7,18 @@ body {
   font-family: "Space Grotesk", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  align-items: center;
-  background: linear-gradient(#030518, black);
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 body #root {
   display: flex;
   flex-direction: column;
-  max-width: 1440px;
 }
 
-a {
+body a {
   text-decoration: none;
   color: unset;
 }
 
-ul, li {
+body ul, body li {
   list-style: none;
 }
