Mise en ligne sur github

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,21 +1,11 @@
 .contact-section {
   display: flex;
+  position: relative;
   flex-direction: column;
+  justify-content: space-around;
   height: 1000px;
   width: 100%;
   background-color: rgba(23, 30, 36, 0.9);
-  justify-content: space-around;
-  overflow: hidden;
-}
-
-.contact-section h2 {
-  position: relative;
-  color: white;
-  font-size: 36px;
-  border-radius: 5px;
-  top: 15px;
-  left: 70px;
-  z-index: 2;
 }
 
 .contact-section form {
@@ -23,7 +13,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-self: center;
-  width: 500px;
+  min-width: 500px;
   height: 500px;
   background-color: #717174;
   padding: 20px 40px;
@@ -47,4 +37,8 @@
   border-style: none;
   padding: 20px 40px;
   background-color: #cec7c7;
+}
+
+.contact-section form button:hover {
+  transform: scale(1.1);
 }
