--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,16 +1,19 @@
 .banner {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  gap: 20px;
   color: white;
-  justify-content: space-evenly;
+  text-align: center;
   background-color: rgb(3, 5, 24);
-  img {
-    width: 100%;
-    height: 500px;
-    z-index: 0;
-  }
-  h1 {
+  padding: 70px;
+  min-height: 12.5rem;
+  strong {
+    display: flex;
     z-index: 1;
-    font-size: 64px;
-    position: absolute;
+    font-size: 24px;
+    font-style: italic;
+
   }
 }
