--- a/src/components/CardsContainer/cardsContainer.css
+++ b/src/components/CardsContainer/cardsContainer.css
@@ -1,48 +1,45 @@
-section {
+.main-cards {
   display: flex;
-  flex-direction: row;
-  height: 1000px;
+  flex-direction: column;
+  min-height: 1000px;
+  max-height: 1000px;
   justify-content: space-around;
   position: relative;
   align-items: center;
-  background-color: rgba(23, 30, 36, 0.9);
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
-section h2 {
-  position: absolute;
-  color: white;
-  font-size: 36px;
-  border-radius: 5px;
-  top: 15px;
-  left: 70px;
-  z-index: 2;
+.main-cards .cards-container {
+  display: flex;
+  flex-direction: row;
 }
 
-section .fa-solid {
+.main-cards .cards-container .fa-solid {
   z-index: 2;
   position: absolute;
   font-size: 48px;
   color: rgba(255, 255, 255, 0.7);
   opacity: 1;
   transition: opacity 0.8s;
+  top: 33rem;
 }
 
-section .fa-solid:hover {
+.main-cards .cards-container .fa-solid:hover {
   transform: scale(1.2);
   color: white;
 }
 
-section .fa-arrow-left {
-  margin-left: 0px;
+.main-cards .cards-container .fa-arrow-left {
+  margin-left: 1rem;
   left: 15px;
 }
 
-section .fa-arrow-right {
-  margin-right: 0px;
+.main-cards .cards-container .fa-arrow-right {
+  margin-right: 1rem;
   right: 15px;
 }
 
-section figure {
+.main-cards .cards-container figure {
   position: relative;
   overflow: hidden;
   height: 500px;
@@ -57,11 +54,11 @@ section figure {
   background-color: unset;
 }
 
-section figure figcaption h3 {
-  margin: 5px 0;
+.main-cards .cards-container figure figcaption h3 {
+  margin: 5px 0 20px 0px;
 }
 
-section figure .wrapper .triangle {
+.main-cards .cards-container figure .wrapper .triangle {
   position: absolute;
   bottom: 0;
   left: 0px;
@@ -73,7 +70,7 @@ section figure .wrapper .triangle {
   z-index: 2;
 }
 
-section figure .wrapper img {
+.main-cards .cards-container figure .wrapper img {
   opacity: 0;
   width: 100%;
   height: 200px;
@@ -82,36 +79,37 @@ section figure .wrapper img {
   z-index: 1;
 }
 
-section figure .wrapper .skill-card {
+.main-cards .cards-container figure .wrapper .skill-card {
   top: 4rem;
   opacity: 0;
   transition: opacity 0.8s, transform 0.8s;
 }
 
-section figure:hover {
+.main-cards .cards-container figure:hover {
   height: 680px;
   transition: transform 0.4s,background-color 2s , height 0.8s;
   transform: scale(1.1);
   background-color: black;
+  justify-content: space-evenly;
 }
 
-section figure:hover figcaption p {
+.main-cards .cards-container figure:hover figcaption p {
   display: none;
 }
 
-section figure:hover .triangle {
+.main-cards .cards-container figure:hover .triangle {
   transition: transform 2s,opacity 2s;
   transform: translateX(400px);
   opacity: 0;
 }
 
-section figure:hover img, section figure:hover .skill-card {
+.main-cards .cards-container figure:hover img, .main-cards .cards-container figure:hover .skill-card {
   transition: opacity 0.8s;
   opacity: 1;
 }
 
-section figure:hover ~ .fa-arrow-left,
-section figure:hover ~ .fa-arrow-right {
+.main-cards .cards-container figure:hover ~ .fa-arrow-left,
+.main-cards .cards-container figure:hover ~ .fa-arrow-right {
   transition: opacity 0.8s;
   opacity: 0;
 }
