--- a/src/components/CardsContainer/cardsContainer.scss
+++ b/src/components/CardsContainer/cardsContainer.scss
@@ -1,21 +1,17 @@
-section {
+.main-cards {
     display: flex;
-    flex-direction: row;
-    height: 1000px;
+    flex-direction: column;
+    min-height: 1000px;
+    max-height: 1000px;
     justify-content: space-around;
     position: relative;
     align-items: center;
-    background-color:  rgba(23, 30, 36, 0.9);
+    background-color:  rgba(0, 0, 0, 0.9);
     
-    h2 {
-        position: absolute;
-        color: white;
-        font-size: 36px;
-        border-radius: 5px;
-        top: 15px;
-        left: 70px;
-        z-index: 2;
-    }
+    .cards-container {
+        display: flex;
+        flex-direction: row;
+    
 
     .fa-solid {
         z-index: 2;
@@ -24,17 +20,18 @@ section {
         color:  rgba(255, 255, 255, 0.7);        
         opacity: 1;        
         transition: opacity 0.8s;
+        top: 33rem;
     }
     .fa-solid:hover {
         transform: scale(1.2);
         color: white;
       }
       .fa-arrow-left {
-        margin-left: 0px;
+        margin-left: 1rem;
         left: 15px;
       }
       .fa-arrow-right {
-        margin-right: 0px;
+        margin-right: 1rem;
         right: 15px;
       }
 
@@ -54,7 +51,7 @@ section {
 
         figcaption {
             h3 {
-                margin: 5px 0;
+                margin: 5px 0 20px 0px;
             }
             p {
             }
@@ -91,6 +88,7 @@ section {
         transition: transform 0.4s,background-color 2s , height 0.8s;
         transform: scale(1.1);
         background-color: black;
+        justify-content: space-evenly;
         figcaption {
             p {
                 display: none;
@@ -114,4 +112,5 @@ section {
             opacity: 0;
         }
     }
+}
 
