--- a/src/components/SkillContent/SkillContent.css
+++ b/src/components/SkillContent/SkillContent.css
@@ -1,18 +1,42 @@
 .skill-section {
-  padding: 10rem;
+  display: flex;
+  flex-direction: column;
+  z-index: 10;
+  position: relative;
+  padding: 8rem;
+  background-color: rgba(23, 30, 36, 0.9);
+}
+
+.skill-section strong {
+  text-align: center;
+  font-size: 25px;
+  color: white;
 }
 
 .skill-section .skill-container {
+  display: flex;
+  flex-direction: row;
   width: 100%;
   min-height: 25rem;
-  border-radius: 8px;
-  background-color: white;
+  gap: 20px;
 }
 
 .skill-section .skill-container article {
-  padding: 20px;
-  border: 3px solid black;
-  height: 33%;
-  width: 100%;
+  border-radius: 8px;
+  padding: 30px;
+  border: 1px solid black;
   font-size: 24px;
+  background: linear-gradient(rgba(180, 115, 246, 0.804), rgba(209, 149, 36, 0.781));
+}
+
+.skill-section .skill-container article ul {
+  font-weight: bold;
+  color: white;
+  padding: 0;
+}
+
+.skill-section .skill-container article ul li {
+  text-align: left;
+  font-weight: normal;
+  margin-top: 10px;
 }
