--- a/src/components/SkillContent/SkillContent.scss
+++ b/src/components/SkillContent/SkillContent.scss
@@ -1,16 +1,38 @@
 .skill-section {
-    padding: 10rem;
+    display: flex;
+    flex-direction: column;
+    z-index: 10;
+    position: relative;
+    padding: 8rem;
+    background-color:  rgba(23, 30, 36, 0.9);
+    strong {
+        text-align: center;
+        font-size: 25px;
+        color: white;
+    }
     .skill-container {
+        display: flex;
+        flex-direction: row;
         width: 100%;
         min-height: 25rem;
-        border-radius: 8px;
-        background-color: white;
+        gap: 20px;
+
         article {
-            padding: 20px;
-            border: 3px solid rgb(0, 0, 0);
-            height: 33%;
-            width: 100%;
+            border-radius: 8px;
+            padding: 30px;
+            border: 1px solid rgb(0, 0, 0);
             font-size: 24px;
+            background: linear-gradient(rgba(180, 115, 246, 0.804), rgba(209, 149, 36, 0.781));
+            ul {
+                font-weight: bold;
+                color: white;
+                padding: 0;
+                li {
+                    text-align: left;
+                    font-weight: normal;
+                    margin-top: 10px;
+                }
+            }
         }
     }
 }
