--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -21,5 +21,110 @@ body {
     ul,li {
         list-style: none;
     }
+
+    h2 {
+        position: absolute;
+        color: rgb(255, 255, 255);
+        font-size: 36px;
+        border-radius: 5px;
+        top: 15px;
+        left: 70px;
+        z-index: 2;
+    }
 }
 
+@media screen and (max-width: 1400px) {
+    body {
+        .skill-section {
+            .skill-container {
+                flex-direction: column;
+            }
+        }
+        .main-cards {
+                height: 100%;
+                min-height: 2000px;
+            .cards-container {
+                padding: 100px 0;
+                flex-direction: column;
+                gap: 20px;
+                .fa-arrow-right {
+                    top: 45px;
+                }
+                .fa-arrow-left {
+                    display: none;
+                }
+
+                
+                figure:hover { 
+                    height: 500px;
+
+                }
+            }
+        }
+        .contact-section {
+            form {
+                min-width: 300px;
+                height: 300px;
+            }
+        }
+    }
+}
+@media screen and (max-width: 600px) {
+    body {
+        header {
+            h1 {
+                font-size: 24px;
+            }
+            .sub-title {
+                font-size: 14px;
+            }
+            nav {
+                ul {
+                    gap: 20px;
+                    font-size: 14px;
+                }
+            }
+        }
+        .skill-section {
+            .skill-container {
+                flex-direction: column;
+            }
+        }
+        .main-cards {
+                height: 100%;
+                min-height: 2000px;
+            .cards-container {
+                padding: 100px 0;
+                flex-direction: column;
+                gap: 20px;
+                .fa-arrow-right {
+                    top: 45px;
+                }
+                .fa-arrow-left {
+                    display: none;
+                }
+                figure {
+                    height: 450px;
+                        figcaption {
+                        h3 {
+                            font-size: 16px;
+                        }
+                        p {
+                            font-size: 14px;
+                        }  
+                }
+                figure:hover { 
+                    height: 500px;
+
+                    }
+                }
+            }
+        }
+        .contact-section {
+            h2 {}
+            form {
+                
+            }
+        }
+    }
+}
