--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -3,12 +3,21 @@
   flex-direction: column;
   justify-content: center;
   position: relative;
-  gap: 20px;
-  color: white;
+  color: rgb(0, 0, 0);
   text-align: center;
-  background-color: rgb(3, 5, 24);
-  padding: 70px;
+  background-color: rgb(71, 71, 77);
+  padding: 20px;
   min-height: 12.5rem;
+  .banner-style-grey {
+    background-color: grey;
+    padding: 20px;  
+    border-radius: 20px;
+  }
+  .banner-style-white {
+    background-color: rgb(255, 255, 255);
+    padding: 20px;
+    border-radius: 20px; 
+  }
   strong {
     display: flex;
     z-index: 1;
@@ -17,3 +26,4 @@
 
   }
 }
+
