--- a/src/components/CardsContainer/cardsContainer.css
+++ b/src/components/CardsContainer/cardsContainer.css
@@ -1,8 +1,7 @@
 .main-cards {
   display: flex;
   flex-direction: column;
-  min-height: 1000px;
-  max-height: 1000px;
+  height: 1000px;
   justify-content: space-around;
   position: relative;
   align-items: center;
@@ -39,10 +38,69 @@
   right: 15px;
 }
 
+.main-cards .cards-container h2 {
+  position: absolute;
+  color: white;
+  font-size: 36px;
+  border-radius: 5px;
+  top: 15px;
+  left: 70px;
+  z-index: 2;
+}
+
+.main-cards .cards-container .fa-solid {
+  z-index: 2;
+  position: absolute;
+  font-size: 48px;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.main-cards .cards-container .fa-solid:hover {
+  transform: scale(1.2);
+  color: rgba(84, 84, 84, 0.729);
+}
+
+.main-cards .cards-container .fa-arrow-left {
+  margin-left: 0px;
+  left: 10px;
+}
+
+.main-cards .cards-container .fa-arrow-right {
+  margin-right: 0px;
+  right: 10px;
+}
+
+.main-cards .cards-container .index-carousel {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  bottom: 5%;
+  left: 43%;
+}
+
+.main-cards .cards-container .index-carousel span {
+  position: relative;
+  font-size: 24px;
+  z-index: 2;
+  width: 30px;
+  height: 15px;
+  border-radius: 3px;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.main-cards .cards-container .index-carousel .span-selected {
+  background-color: rgba(84, 84, 84, 0.729);
+}
+
+.main-cards .cards-container .index-carousel span:hover {
+  background-color: rgba(56, 55, 77, 0.729);
+}
+
 .main-cards .cards-container figure {
   position: relative;
   overflow: hidden;
-  height: 500px;
+  max-height: 500px;
   width: 350px;
   padding: 20px;
   border-radius: 8px;
@@ -50,7 +108,7 @@
   font-size: 20px;
   background: linear-gradient(rgba(180, 115, 246, 0.804), rgba(209, 149, 36, 0.781));
   box-shadow: 10px 8px 5px 10px rgba(0, 0, 0, 0.626);
-  transition: transform 0.4s, background-color 2s ,height 0.8s;
+  transition: transform 0.4s, background-color 2s , height 0.8s;
   background-color: unset;
 }
 
@@ -75,19 +133,27 @@
   width: 100%;
   height: 200px;
   border-radius: 5px;
-  transition: opacity 0.8s;
+  transition: opacity 0.4s;
   z-index: 1;
 }
 
 .main-cards .cards-container figure .wrapper .skill-card {
   top: 4rem;
   opacity: 0;
-  transition: opacity 0.8s, transform 0.8s;
+  transition: opacity 0.4s, transform 0.4s;
+  margin: 0;
+  padding: 0;
+}
+
+.main-cards .cards-container figure .wrapper .skill-card li {
+  margin: 0;
+  padding: 0;
 }
 
 .main-cards .cards-container figure:hover {
-  height: 680px;
-  transition: transform 0.4s,background-color 2s , height 0.8s;
+  min-height: 500px;
+  max-height: 680px;
+  transition: transform 0.4s,background-color 2s , max-height 0.8s;
   transform: scale(1.1);
   background-color: black;
   justify-content: space-evenly;
@@ -104,12 +170,12 @@
 }
 
 .main-cards .cards-container figure:hover img, .main-cards .cards-container figure:hover .skill-card {
-  transition: opacity 0.8s;
+  transition: opacity 0.4s;
   opacity: 1;
 }
 
 .main-cards .cards-container figure:hover ~ .fa-arrow-left,
 .main-cards .cards-container figure:hover ~ .fa-arrow-right {
-  transition: opacity 0.8s;
+  transition: opacity 0.4s;
   opacity: 0;
 }
