--- a/src/components/CardsContainer/cardsContainer.scss
+++ b/src/components/CardsContainer/cardsContainer.scss
@@ -1,8 +1,7 @@
 .main-cards {
     display: flex;
     flex-direction: column;
-    min-height: 1000px;
-    max-height: 1000px;
+    height: 1000px;
     justify-content: space-around;
     position: relative;
     align-items: center;
@@ -38,7 +37,6 @@
     h2 {
         position: absolute;
         color: white;
-        background:linear-gradient(purple , orange);
         font-size: 36px;
         border-radius: 5px;
         top: 15px;
@@ -93,7 +91,7 @@
     figure {
         position: relative;
         overflow: hidden;
-        height: 500px;
+        max-height: 500px;
         width: 350px;
         padding: 20px;
         border-radius: 8px;
@@ -101,7 +99,7 @@
         font-size: 20px;
         background: linear-gradient(rgba(180, 115, 246, 0.804), rgba(209, 149, 36, 0.781));
         box-shadow: 10px 8px 5px 10px rgba(0, 0, 0, 0.626);
-        transition: transform 0.4s, background-color 2s ,height 0.8s;
+        transition: transform 0.4s, background-color 2s , height 0.8s;
         background-color: unset;
 
         figcaption {
@@ -128,19 +126,26 @@
                 width: 100%;
                 height: 200px;
                 border-radius: 5px;
-                transition: opacity 0.8s;
+                transition: opacity 0.4s;
                 z-index: 1;
             }
             .skill-card {
                 top: 4rem;
                 opacity: 0;
-                transition: opacity 0.8s, transform 0.8s;
+                transition: opacity 0.4s, transform 0.4s;
+                margin: 0;
+                padding: 0;
+                    li {
+                        margin: 0;
+                        padding: 0;
+                    }
             }
         }
     }
     figure:hover { 
-        height: 680px;
-        transition: transform 0.4s,background-color 2s , height 0.8s;
+        min-height: 500px;
+        max-height: 680px;
+        transition: transform 0.4s,background-color 2s , max-height 0.8s;
         transform: scale(1.1);
         background-color: black;
         justify-content: space-evenly;
@@ -156,14 +161,14 @@
             opacity: 0;
         }
         img , .skill-card {
-            transition: opacity 0.8s;
+            transition: opacity 0.4s;
             opacity: 1;
         }
     }
         
         figure:hover ~ .fa-arrow-left,
         figure:hover ~ .fa-arrow-right {
-            transition: opacity 0.8s;
+            transition: opacity 0.4s;
             opacity: 0;
         }
     }
