--- a/src/components/HeaderFooter/headerfooter.css
+++ b/src/components/HeaderFooter/headerfooter.css
@@ -3,6 +3,7 @@ header {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  height: 10vh;
   text-align: center;
   color: white;
   background-color: rgba(23, 30, 36, 0.9);
@@ -41,7 +42,7 @@ footer {
   align-items: center;
   text-align: center;
   width: 100%;
-  height: 200px;
+  height: 15vh;
   color: white;
   background-color: black;
 }
@@ -56,4 +57,19 @@ footer ul {
 footer ul li {
   display: flex;
   flex-direction: column;
+}
+
+@media screen and (max-width: 700px) {
+  header .logo-container h1 {
+    font-size: 16px;
+  }
+  header .logo-container .sub-title {
+    font-size: 14px;
+  }
+  header nav ul {
+    gap: 5px;
+  }
+  header nav ul li {
+    font-size: 12px;
+  }
 }
