--- a/src/components/MailContainer/MailContainer.css
+++ b/src/components/MailContainer/MailContainer.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   background-color: rgba(23, 30, 36, 0.9);
-  padding: 100px 0px;
+  padding: 100px 11rem;
   height: 100%;
   gap: 20px;
 }
@@ -14,8 +14,14 @@
   justify-content: center;
   padding: 20px;
   color: white;
-  width: 800px;
+  width: 100%;
   border: 2px solid white;
   background: linear-gradient(rgba(127, 127, 127, 0.9), rgba(85, 85, 85, 0.9));
   border-radius: 5px;
+}
+
+@media screen and (max-width: 700px) {
+  .mail-container {
+    padding: 100px 3rem;
+  }
 }
