--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -19,7 +19,8 @@ body a {
   color: unset;
 }
 
-body ul, body li {
+body ul,
+body li {
   list-style: none;
 }
 
@@ -34,12 +35,19 @@ body h2 {
 }
 
 @media screen and (max-width: 1400px) {
+  body h2 {
+    font-size: 28px;
+    border-radius: 5px;
+    top: 0;
+    left: 30px;
+    z-index: 2;
+  }
   body .skill-section .skill-container {
     flex-direction: column;
   }
   body .main-cards {
     height: 100%;
-    min-height: 2000px;
+    min-height: auto;
   }
   body .main-cards .cards-container {
     padding: 100px 0;
@@ -53,31 +61,30 @@ body h2 {
     display: none;
   }
   body .main-cards .cards-container figure:hover {
-    height: 500px;
-  }
-  body .contact-section form {
-    min-width: 300px;
-    height: 300px;
+    min-height: 500px;
   }
 }
 
-@media screen and (max-width: 600px) {
-  body header h1 {
-    font-size: 24px;
+@media screen and (max-width: 700px) {
+  body .banner strong {
+    font-size: 18px;
   }
-  body header .sub-title {
-    font-size: 14px;
-  }
-  body header nav ul {
-    gap: 20px;
-    font-size: 14px;
+  body .skill-section {
+    padding: 7rem 2rem;
   }
   body .skill-section .skill-container {
     flex-direction: column;
   }
+  body .skill-section .skill-container article {
+    padding: 1rem;
+  }
+  body .skill-section .skill-container article ul li {
+    margin-left: 20px;
+    font-size: 16px;
+  }
   body .main-cards {
     height: 100%;
-    min-height: 2000px;
+    min-height: inherit;
   }
   body .main-cards .cards-container {
     padding: 100px 0;
@@ -91,15 +98,42 @@ body h2 {
     display: none;
   }
   body .main-cards .cards-container figure {
-    height: 450px;
+    max-height: 450px;
+    width: 200px;
   }
   body .main-cards .cards-container figure figcaption h3 {
-    font-size: 16px;
+    font-size: 24px;
+    margin-bottom: 5px;
   }
   body .main-cards .cards-container figure figcaption p {
-    font-size: 14px;
+    font-size: 18px;
   }
-  body .main-cards .cards-container figure figure:hover {
-    height: 500px;
+  body .main-cards .cards-container figure .wrapper img {
+    height: 150px;
+  }
+  body .main-cards .cards-container figure:hover {
+    max-height: 500px;
+  }
+  body .main-cards .cards-container figure:hover .wrapper .skill-card li {
+    font-size: 16px;
+  }
+  body .contact-section {
+    padding: 0px 5px;
+  }
+  body .contact-section form {
+    height: auto;
+    width: 70%;
+    padding: 15px;
+    justify-content: space-evenly;
+  }
+  body .contact-section form label input {
+    font-size: 16px;
+  }
+  body .contact-section form button {
+    margin-top: 5px;
+    width: 100px;
+    border-radius: 15px;
+    padding: 10px 20px;
+    background-color: #cec7c7;
   }
 }
