--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,130 +1,154 @@
 body {
-    margin: 0;
-    height: 100%;
-    width: 100%;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  font-family: "Space Grotesk", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+
+  #root {
     display: flex;
     flex-direction: column;
-    font-family: "Space Grotesk", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    
-    #root {
-        display: flex;
-        flex-direction: column;   
-    }
-    
-    a {
-        text-decoration: none;
-        color: unset;
-    }
+  }
 
-    ul,li {
-        list-style: none;
-    }
+  a {
+    text-decoration: none;
+    color: unset;
+  }
 
-    h2 {
-        position: absolute;
-        color: rgb(255, 255, 255);
-        font-size: 36px;
-        border-radius: 5px;
-        top: 15px;
-        left: 70px;
-        z-index: 2;
-    }
+  ul,
+  li {
+    list-style: none;
+  }
+
+  h2 {
+    position: absolute;
+    color: rgb(255, 255, 255);
+    font-size: 36px;
+    border-radius: 5px;
+    top: 15px;
+    left: 70px;
+    z-index: 2;
+  }
 }
 
 @media screen and (max-width: 1400px) {
-    body {
-        .skill-section {
-            .skill-container {
-                flex-direction: column;
-            }
-        }
-        .main-cards {
-                height: 100%;
-                min-height: 2000px;
-            .cards-container {
-                padding: 100px 0;
-                flex-direction: column;
-                gap: 20px;
-                .fa-arrow-right {
-                    top: 45px;
-                }
-                .fa-arrow-left {
-                    display: none;
-                }
-
-                
-                figure:hover { 
-                    height: 500px;
-
-                }
-            }
-        }
-        .contact-section {
-            form {
-                min-width: 300px;
-                height: 300px;
-            }
-        }
+  body {
+    h2 {
+        font-size: 28px;
+        border-radius: 5px;
+        top: 0;
+        left: 30px;
+        z-index: 2;
+      }
+    .skill-section {
+      .skill-container {
+        flex-direction: column;
+      }
     }
+    .main-cards {
+      height: 100%;
+      min-height: auto;
+      .cards-container {
+        padding: 100px 0;
+        flex-direction: column;
+        gap: 20px;
+        .fa-arrow-right {
+          top: 45px;
+        }
+        .fa-arrow-left {
+          display: none;
+        }
+
+        figure:hover {
+        min-height: 500px;
+        }
+      }
+    }
+  }
 }
-@media screen and (max-width: 600px) {
-    body {
-        header {
-            h1 {
-                font-size: 24px;
-            }
-            .sub-title {
-                font-size: 14px;
-            }
-            nav {
-                ul {
-                    gap: 20px;
-                    font-size: 14px;
-                }
-            }
-        }
-        .skill-section {
-            .skill-container {
-                flex-direction: column;
-            }
-        }
-        .main-cards {
-                height: 100%;
-                min-height: 2000px;
-            .cards-container {
-                padding: 100px 0;
-                flex-direction: column;
-                gap: 20px;
-                .fa-arrow-right {
-                    top: 45px;
-                }
-                .fa-arrow-left {
-                    display: none;
-                }
-                figure {
-                    height: 450px;
-                        figcaption {
-                        h3 {
-                            font-size: 16px;
-                        }
-                        p {
-                            font-size: 14px;
-                        }  
-                }
-                figure:hover { 
-                    height: 500px;
-
-                    }
-                }
-            }
-        }
-        .contact-section {
-            h2 {}
-            form {
-                
-            }
-        }
+@media screen and (max-width: 700px) {
+  body {
+    .banner strong {
+      font-size: 18px;
     }
+    .skill-section {
+      padding: 7rem 2rem;
+      .skill-container {
+        flex-direction: column;
+        article {
+          padding: 1rem;
+          ul li {
+            margin-left: 20px;
+            font-size: 16px;
+          }
+        }
+      }
+    }
+    .main-cards {
+      height: 100%;
+      min-height: inherit;
+      .cards-container {
+        padding: 100px 0;
+        flex-direction: column;
+        gap: 20px;
+        .fa-arrow-right {
+          top: 45px;
+        }
+        .fa-arrow-left {
+          display: none;
+        }
+        figure {
+          max-height: 450px;
+          width: 200px;
+          figcaption {
+            h3 {
+              font-size: 24px;
+              margin-bottom: 5px;
+            }
+            p {
+              font-size: 18px;
+            }
+          }
+          .wrapper {
+            img {
+                height: 150px;
+            }
+          }
+        }
+        figure:hover {
+          max-height: 500px;
+          .wrapper .skill-card {
+            li {
+                font-size: 16px;
+            }
+          }
+          
+        }
+      }
+    }
+    .contact-section {
+        padding: 0px 5px;
+      h2 {
+      }
+      form {
+          height: auto;
+          width: 70%;
+          padding: 15px;
+          justify-content: space-evenly;
+          label input {
+              font-size: 16px;
+          }
+          button {
+            margin-top: 5px;
+            width: 100px;
+            border-radius: 15px;
+            padding: 10px 20px;
+            background-color: rgb(206, 199, 199);
+          }
+      }
+    }
+  }
 }
