--- a/src/components/CardsContainer/cardsContainer.scss
+++ b/src/components/CardsContainer/cardsContainer.scss
@@ -92,6 +92,7 @@
         position: relative;
         overflow: hidden;
         max-height: 500px;
+        height: 100%;
         width: 350px;
         padding: 20px;
         border-radius: 8px;
