--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -102,7 +102,7 @@ body {
         }
         figure {
           max-height: 450px;
-          width: 200px;
+          max-width: 269px;
           figcaption {
             h3 {
               font-size: 24px;
@@ -148,6 +148,42 @@ body {
             padding: 10px 20px;
             background-color: rgb(206, 199, 199);
           }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 408px) {
+  body {
+    .main-cards {
+      .cards-container {
+        figure {
+          max-height: 450px;
+          max-width: 200px;
+          figcaption {
+            h3 {
+              font-size: 24px;
+              margin-bottom: 5px;
+            }
+            p {
+              font-size: 18px;
+            }
+          }
+          .wrapper {
+            img {
+                height: 150px;
+            }
+          }
+        }
+        figure:hover {
+          max-height: 500px;
+          .wrapper .skill-card {
+            li {
+                font-size: 16px;
+            }
+          }
+          
+        }
       }
     }
   }
