--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,30 +1,3 @@
 .banner {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  color: black;
-  text-align: center;
-  background-color: #47474d;
-  padding: 20px;
-  min-height: 12.5rem;
-}
-
-.banner .banner-style-grey {
-  background-color: grey;
-  padding: 20px;
-  border-radius: 20px;
-}
-
-.banner .banner-style-white {
-  background-color: white;
-  padding: 20px;
-  border-radius: 20px;
-}
-
-.banner strong {
-  display: flex;
-  z-index: 1;
-  font-size: 24px;
-  font-style: italic;
+  width: auto;
 }
