--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -7,6 +7,7 @@ body {
   font-family: "Space Grotesk", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  background-color: rgba(23, 30, 36, 0.9);
 }
 
 body #root {
@@ -22,6 +23,10 @@ body a {
 body ul,
 body li {
   list-style: none;
+}
+
+body main {
+  padding: 0px 40px;
 }
 
 body h2 {
