--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -7,6 +7,7 @@ body {
   font-family: "Space Grotesk", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  background-color: rgba(23, 30, 36, 0.9);
 
   #root {
     display: flex;
@@ -21,6 +22,10 @@ body {
   ul,
   li {
     list-style: none;
+  }
+
+  main {
+    padding: 0px 40px;
   }
 
   h2 {
