--- a/src/components/CardsContainer/cardsContainer.scss
+++ b/src/components/CardsContainer/cardsContainer.scss
@@ -1,123 +1,137 @@
 .main-cards {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+
+  h2 {
+    font-size: 48px;
+  }
+  .cards-container {
     display: flex;
-    flex-direction: column;
-    height: 1000px;
-    justify-content: space-around;
-    position: relative;
-    align-items: center;
-    
-    .cards-container {
-        display: flex;
-        flex-direction: row;
-    
+    flex-direction: row;
+    flex: 1;
 
-    .fa-solid {
-        z-index: 2;
-        position: absolute;
-        font-size: 48px;
-        color:  rgba(255, 255, 255, 0.7);        
-        opacity: 1;        
-        transition: opacity 0.8s;
-        top: 33rem;
+    .switch {
+      position: relative;
+      width: 7rem;
+      height: 100px;
+      top: -0.5rem;
+      right: 10rem;
+      opacity: 0.2;
+      z-index: 1;
+      font-size: 16px;
+      border-radius: 25% 25% 0 0;
+      text-align: center;
+      cursor: pointer;
+      background:linear-gradient( rgba(255, 255, 251, 0.635),rgba(255, 255, 255, 0));
+      transition: opacity 0.8s ease, transform 0.8s ease, background-color 0.8s ease;
+
+      &:hover,
+      &:focus {
+        opacity: 0.6;
+        transform: scale(1.1) translateY(-1rem);
+        background: linear-gradient(orange, rgba(255, 255, 255, 0));
+      }
     }
-    .fa-solid:hover {
-        transform: scale(1.2);
-        color: orange;
-      }
-      .fa-arrow-left {
-        margin-left: 1rem;
-        left: 15px;
-      }
-      .fa-arrow-right {
-        margin-right: 1rem;
-        right: 15px;
-      }
-
 
     figure {
-        position: relative;
-        overflow: hidden;
-        max-height: 500px;
-        height: 100%;
-        width: 350px;
-        padding: 20px;
-        border-radius: 8px;
-        color: white;
-        font-size: 20px;
-        background: linear-gradient(rgba(180, 115, 246, 0.804), rgba(209, 149, 36, 0.781));
-        box-shadow: 10px 8px 5px 10px rgba(0, 0, 0, 0.626);
-        transition: transform 0.4s, background-color 2s , height 0.8s;
-        background-color: unset;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      max-height: 500px;
+      min-height: 100px;
+      width: 350px;
+      padding: 20px;
+      z-index: 2;
+      border-radius: 8px;
+      color: white;
+      font-size: 20px;
+      background: linear-gradient(
+        rgba(180, 115, 246, 0.804),
+        rgba(209, 149, 36, 0.781)
+      );
+      box-shadow: 10px 8px 5px 10px rgba(0, 0, 0, 0.626);
+      transition: transform 0.4s ease, background-color 2s ease, max-height 0.8s ease;
 
-        figcaption {
-            h3 {
-                margin: 5px 0 20px 0px;
-            }
-            p {
-            }
+      figcaption {
+        h3 {
+          margin: 5px 0 20px 0;
         }
-        .wrapper {               
-            .triangle {
-                position: absolute;
-                bottom: 0;
-                left: 0px;
-                width: 0;
-                height: 0;
-                border-left: 25rem solid transparent;
-                border-bottom: 22rem solid  rgba(23, 30, 36, 0.9);
-                transition: transform 1s,opacity 2s;
-                z-index: 2;
-            }
-            img {
-                opacity: 0;
-                width: 100%;
-                height: 200px;
-                border-radius: 5px;
-                transition: opacity 0.4s;
-                z-index: 1;
-            }
-            .skill-card {
-                top: 4rem;
-                opacity: 0;
-                transition: opacity 0.4s, transform 0.4s;
-                margin: 0;
-                padding: 0;
-                    li {
-                        margin: 0;
-                        padding: 0;
-                    }
-            }
+        p {
+          transition: font-size 0.8s ease;
         }
-    }
-    figure:hover { 
-        min-height: 500px;
-        max-height: 680px;
-        transition: transform 0.4s,background-color 2s , max-height 0.8s;
-        transform: scale(1.1);
-        background-color: black;
-        justify-content: space-evenly;
-        figcaption {
-            p {
-                display: none;
-            }
+      }
 
-        }
+      .wrapper {
         .triangle {
-            transition: transform 2s,opacity 2s;
-            transform: translateX(400px);
-            opacity: 0;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 0;
+          height: 0;
+          border-left: 25rem solid transparent;
+          border-bottom: 22rem solid rgba(23, 30, 36, 0.9);
+          transition: transform 1s ease, opacity 2s ease;
+          z-index: 2;
         }
-        img , .skill-card {
-            transition: opacity 0.4s;
-            opacity: 1;
-        }
-    }
-        
-        figure:hover ~ .fa-arrow-left,
-        figure:hover ~ .fa-arrow-right {
-            transition: opacity 0.4s;
-            opacity: 0;
-        }
-    }
-}
 
+        img {
+          opacity: 0;
+          width: 100%;
+          height: 200px;
+          border-radius: 5px;
+          transition: opacity 0.4s ease;
+          z-index: 1;
+          border: 2px solid rgba(23, 30, 36, 0.9);
+        }
+
+        .skill-card {
+          display: flex;
+          flex-direction: column;
+          text-align: center;
+          gap: 10px;
+          top: 4rem;
+          opacity: 0;
+          transition: opacity 0.8s ease, transform 0.8s ease;
+          margin: 0;
+          padding: 0;
+          height: 100%;
+
+          li {
+            margin: 0;
+            padding: 2px;
+            border-radius: 5px;
+            color: white;
+            background-color: rgba(23, 30, 36, 0.9);
+          }
+        }
+      }
+    }
+
+    figure:hover {
+      min-height: 500px;
+      max-height: 650px;
+      transform: scale(1.05);
+      background-color: black;
+
+      figcaption p {
+        font-size: 0;
+      }
+
+      .triangle {
+        transition: transform 2s ease, opacity 2s ease;
+        transform: translateX(400px);
+        opacity: 0;
+      }
+
+      img,
+      .skill-card {
+        transition: opacity 0.8s ease;
+        opacity: 1;
+      }
+    }
+  }
+}
