--- a/src/components/SkillContent/SkillContent.scss
+++ b/src/components/SkillContent/SkillContent.scss
@@ -1,37 +1,65 @@
 .skill-section {
-    display: flex;
-    flex-direction: column;
-    z-index: 2;
-    position: relative;
-    padding: 8rem;
-    strong {
-        text-align: center;
-        font-size: 25px;
-        color: white;
-    }
-    .skill-container {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        min-height: 25rem;
-        gap: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 2;
 
-        article {
-            border-radius: 8px;
-            padding: 30px;
-            border: 1px solid rgb(0, 0, 0);
-            font-size: 24px;
-            background: linear-gradient(rgba(180, 115, 246, 0.804), rgba(209, 149, 36, 0.781));
-            ul {
-                font-weight: bold;
-                color: white;
-                padding: 0;
-                li {
-                    text-align: left;
-                    font-weight: normal;
-                    margin-top: 10px;
-                }
-            }
-        }
+  h2 {
+    text-align: center;
+    font-size: 48px;
+    color: white;
+    margin: 10rem 0 0 0;
+    flex: 1;
+  }
+  .skill-container {
+    width: 320px;
+    height: 320px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 5px;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 5px;
+    margin-bottom: 10rem;
+    .grid-item {
+      width: 100px;
+      height: 100px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 40px;
+      background: rgba(255, 255, 255, 0.959);
+      border-radius: 10px;
+      cursor: pointer;
+      transition: all 0.5s ease;
     }
+
+    .grid-item:empty {
+      background: transparent; /* Case vide */
+    }
+    .grid-item:hover {
+        color: orange;
+        transform: scale(1.1);
+    }
+
+    // article {
+    //     border-radius: 8px;
+    //     padding: 5px 30px 30px 30px;
+    //     border: 1px solid rgb(0, 0, 0);
+    //     font-size: 24px;
+    //     background: linear-gradient(rgba(180, 115, 246, 0.804), rgba(209, 149, 36, 0.781));
+    //     ul {
+    //         font-weight: bold;
+    //         color: white;
+    //         padding: 0;
+    //         li {
+    //             text-align: left;
+    //             font-weight: normal;
+    //             margin-top: 10px;
+    //         }
+    //     }
+    // }
+  }
 }
