--- a/src/components/CardsContainer/cardsContainer.css
+++ b/src/components/CardsContainer/cardsContainer.css
@@ -1,7 +1,6 @@
 .main-cards {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
   position: relative;
 }
@@ -11,9 +10,12 @@
 }
 
 .main-cards .cards-container {
-  display: flex;
-  flex-direction: row;
-  flex: 1;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  box-sizing: content-box;
+  width: 100%;
+  max-width: 1200px;
 }
 
 .main-cards .cards-container .switch {
@@ -44,7 +46,7 @@
   flex-direction: column;
   overflow: hidden;
   max-height: 500px;
-  min-height: 100px;
+  min-height: 500px;
   width: 350px;
   padding: 20px;
   z-index: 2;
@@ -53,7 +55,7 @@
   font-size: 20px;
   background: linear-gradient(rgba(180, 115, 246, 0.804), rgba(209, 149, 36, 0.781));
   box-shadow: 10px 8px 5px 10px rgba(0, 0, 0, 0.626);
-  transition: transform 0.4s ease, background-color 2s ease, max-height 0.8s ease;
+  transition: transform 0.8s ease, background-color 2s ease, max-height 0.8s ease;
 }
 
 .main-cards .cards-container figure figcaption h3 {
@@ -81,7 +83,7 @@
   width: 100%;
   height: 200px;
   border-radius: 5px;
-  transition: opacity 0.4s ease;
+  transition: opacity 0.8s ease;
   z-index: 1;
   border: 2px solid rgba(23, 30, 36, 0.9);
 }
@@ -108,7 +110,6 @@
 }
 
 .main-cards .cards-container figure:hover {
-  min-height: 500px;
   max-height: 650px;
   transform: scale(1.05);
   background-color: black;
@@ -128,4 +129,26 @@
 .main-cards .cards-container figure:hover .skill-card {
   transition: opacity 0.8s ease;
   opacity: 1;
+}
+
+.main-cards .grid {
+  display: grid;
+}
+
+.main-cards .btn-box {
+  position: absolute;
+  bottom: 5px;
+}
+
+.main-cards .btn {
+  background-color: #4a90e2;
+  color: white;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.main-cards .btn:disabled {
+  display: none;
 }
