--- a/src/components/CardsContainer/cardsContainer.scss
+++ b/src/components/CardsContainer/cardsContainer.scss
@@ -1,7 +1,6 @@
 .main-cards {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
   position: relative;
 
@@ -9,9 +8,11 @@
     font-size: 48px;
   }
   .cards-container {
-    display: flex;
-    flex-direction: row;
-    flex: 1;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;box-sizing: content-box;
+    width: 100%;
+    max-width: 1200px;
 
     .switch {
       position: relative;
@@ -42,7 +43,7 @@
       flex-direction: column;
       overflow: hidden;
       max-height: 500px;
-      min-height: 100px;
+      min-height: 500px;
       width: 350px;
       padding: 20px;
       z-index: 2;
@@ -54,7 +55,7 @@
         rgba(209, 149, 36, 0.781)
       );
       box-shadow: 10px 8px 5px 10px rgba(0, 0, 0, 0.626);
-      transition: transform 0.4s ease, background-color 2s ease, max-height 0.8s ease;
+      transition: transform 0.8s ease, background-color 2s ease, max-height 0.8s ease;
 
       figcaption {
         h3 {
@@ -83,7 +84,7 @@
           width: 100%;
           height: 200px;
           border-radius: 5px;
-          transition: opacity 0.4s ease;
+          transition: opacity 0.8s ease;
           z-index: 1;
           border: 2px solid rgba(23, 30, 36, 0.9);
         }
@@ -112,7 +113,6 @@
     }
 
     figure:hover {
-      min-height: 500px;
       max-height: 650px;
       transform: scale(1.05);
       background-color: black;
@@ -133,5 +133,26 @@
         opacity: 1;
       }
     }
+  }
+  .grid {
+    display: grid;
+  }
+  
+  .btn-box {
+    position: absolute;
+    bottom: 5px;
+  }
+
+  .btn {
+    background-color: #4a90e2;
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .btn:disabled {
+    display: none;
   }
 }
