--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -27,7 +27,7 @@ body li {
 
 body main {
   max-width: 100vw;
-  height: 90vh;
+  min-height: 90vh;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -76,7 +76,7 @@ body h2 {
   justify-content: center;
   align-items: center;
   width: 100%;
-  bottom: 60px;
+  bottom: 0;
 }
 
 .slider-pagination input {
@@ -130,20 +130,26 @@ body h2 {
   right: 10px;
 }
 
+@media screen and (max-width: 1360px) {
+  .main-cards .cards-container figure {
+    max-height: 450px;
+    min-height: 450px;
+    width: 300px;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .main-cards {
     flex-direction: column;
   }
   .main-cards .cards-container {
-    flex-direction: column;
+    display: flex;
+    padding: 50px 0;
     align-items: center;
   }
   .main-cards .cards-container figure {
     width: 80%;
     max-width: 300px;
-  }
-  .skill-section h2 {
-    font-size: 36px;
   }
   .skill-section .skill-container {
     width: 280px;
@@ -182,10 +188,14 @@ body h2 {
   .main {
     height: 100%;
   }
+  .main h2 {
+    font-size: 36px;
+  }
   .main-cards h2 {
     font-size: 32px;
   }
   .main-cards .cards-container {
+    display: flex;
     padding: 50px 0;
   }
   .main-cards .cards-container figure {
@@ -193,21 +203,21 @@ body h2 {
     max-width: 280px;
     min-height: auto;
   }
-  .contact-section h2 {
+  .main-cards .contact-section h2 {
     font-size: 32px;
   }
-  .contact-section form {
+  .main-cards .contact-section form {
     width: 90%;
     max-width: 400px;
   }
-  .contact-section form button {
+  .main-cards .contact-section form button {
     font-size: 16px;
   }
-  .skill-section .skill-container {
+  .main-cards .skill-section .skill-container {
     width: 250px;
     height: 250px;
   }
-  .skill-section .skill-container .grid-item {
+  .main-cards .skill-section .skill-container .grid-item {
     width: 80px;
     height: 80px;
     font-size: 28px;
@@ -215,6 +225,19 @@ body h2 {
 }
 
 @media screen and (max-width: 480px) {
+  body .prev, body .next {
+    position: absolute;
+    top: 90%;
+    transform: translateY(-50%);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 3rem;
+    z-index: 3;
+    transition: color 0.8s ease, font-size 0.8s ease;
+    /* Correction ici */
+  }
   body h2 {
     font-size: 28px;
   }
@@ -232,7 +255,7 @@ body h2 {
   }
   .main-cards .cards-container figure {
     width: 100%;
-    max-width: 240px;
+    max-width: 200px;
   }
   .main-cards .cards-container figure figcaption h3 {
     font-size: 20px;
@@ -241,7 +264,6 @@ body h2 {
     font-size: 16px;
   }
   .contact-section form {
-    width: 95%;
     padding: 15px;
   }
   .contact-section form button {
