--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -26,7 +26,7 @@ body {
 
   main {
     max-width: 100vw;
-    height: 90vh;
+    min-height: 90vh;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -75,7 +75,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  bottom: 60px;
+  bottom: 0;
   input {
     appearance: none;
     width: 16px;
@@ -122,11 +122,20 @@ body {
   right: 10px;
 }
 
+@media screen and (max-width: 1360px) {
+  .main-cards .cards-container figure {
+    max-height: 450px;
+    min-height: 450px;
+    width: 300px;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .main-cards {
     flex-direction: column;
     .cards-container {
-      flex-direction: column;
+      display: flex;
+      padding: 50px 0;
       align-items: center;
       figure {
         width: 80%;
@@ -136,9 +145,7 @@ body {
   }
 
   .skill-section {
-    h2 {
-      font-size: 36px;
-    }
+
     .skill-container {
       width: 280px;
       height: 280px;
@@ -179,13 +186,17 @@ body {
     }
   }
   .main {
-    height: 100%;
+    height: 100%;    
+    h2 {
+      font-size: 36px;
+    }
   }
   .main-cards {
     h2 {
       font-size: 32px;
     }
     .cards-container {
+      display: flex;
       padding: 50px 0;
       figure {
         width: 90%;
@@ -193,7 +204,7 @@ body {
         min-height: auto;
       }
     }
-  }
+  
 
   .contact-section {
     h2 {
@@ -220,11 +231,27 @@ body {
     }
   }
 }
+}
 
 @media screen and (max-width: 480px) {
   body {
+    .prev,.next {
+      position: absolute;
+      top: 90%;
+      transform: translateY(-50%);
+      color: white;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      font-size: 3rem;
+      z-index: 3;  
+      transition: color 0.8s ease, font-size 0.8s ease; /* Correction ici */
+    }
     h2 {
       font-size: 28px;
+    }
+    .contact-section{
+
     }
   }
 
@@ -247,7 +274,7 @@ body {
       padding: 30px 0;
       figure {
         width: 100%;
-        max-width: 240px;
+        max-width: 200px;
         figcaption {
           h3 {
             font-size: 20px;
@@ -262,7 +289,6 @@ body {
 
   .contact-section {
     form {
-      width: 95%;
       padding: 15px;
       button {
         width: 120px;
